Mon Jun 18 13:20:32 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          Use -z for debug mode

Mon Jun 18 06:44:11 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * debian/*:
          Updated with latest files from debian packaging

Thu Jun 14 14:05:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils/XML_Error_Handler.cpp:
          Only print errors on cerr when we have ACE::debug enabled

Wed Jun 13 05:57:16 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/bczar/bczar.html:
          Added another package

Tue Jun 12 17:30:47 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/make_release.py:
          Exclude CIAO_*_OpenDDS workspaces for the moment

Mon Jun 11 21:45:19 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * NEWS:
        * ace/config-lite.h:
        * include/makeinclude/platform_sunos5_sunc++.GNU:

          Added support for Oracle Solaris Studio 12 Update 3 (SunCC 5.12).

Mon Jun 11 17:05:36 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          Added option -d to run OpenDDS tests also

        * bin/diff-builds-and-group-fixed-tests-only.sh:
          Also check OpenDDS lst files

Thu Jun  7 10:13:13 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Condition_Thread_Mutex.h:
        * ace/Dynamic_Message_Strategy.h:
        * ace/Message_Queue.h:
        * ace/Metrics_Cache_T.h:
          Doxygen fixes

Wed Jun  6 14:46:53 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils/XSCRT/Traversal.hpp:
        * ace/XML_Utils/XSCRT/Traversal.tpp:
          Readded tpp file, shouldn't have been deleted

Wed Jun  6 13:09:02 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/XML_Utils/XMLSchema/Traversal.hpp:
        * ace/XML_Utils/XMLSchema/Types.hpp:
        * ace/XML_Utils/XMLSchema/Writer.hpp:
        * ace/XML_Utils/XSCRT/Elements.hpp: